Add Userscript config

--- a/views/settings/settings.html
+++ b/views/settings/settings.html
@@ -191,6 +191,12 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td width="30%" class="l10n">User Defined Deploy Script</td>
+                                <td width="70%">
+                                    <input type="text" class="settings-item" value="" data-key="hexo-user-script" style="width: calc(100% - 25px);">
+                                </td>
+                            </tr>
+                            <tr>
                                 <td width="30%" class="l10n">Hexo Config</td>
                                 <td width="70%">
                                     <input type="text" class="settings-item" readonly  data-key="hexo-config" style="width: calc(100% - 25px);">
